--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,41 @@
 <ion-header>
-	<ion-navbar>
+	<ion-navbar hideBackButton="true">
+			<button style="display : inline !important" ion-button menuToggle>
+					<ion-icon name="menu"></ion-icon>
+		    </button>
 		<ion-title>
 			Patient-Tracker
 		</ion-title>
 	</ion-navbar>
 </ion-header>
 
+<ion-menu [content]="content">
+		<ion-header>
+		  <ion-toolbar>
+			<ion-title>Menu</ion-title>
+		  </ion-toolbar>
+		</ion-header>
+		<ion-content>
+		  <ion-list>
+			
+			 <button ion-item (click)="logout()">
+			  Logout
+			</button>
+
+			<!--<button ion-item (click)="openPage(eventsPage)">
+			  Events
+			</button>
+			<button ion-item (click)="closeMenu()">
+			  Close Menu
+			</button> -->
+		  </ion-list>
+		</ion-content>
+	  </ion-menu>
+	  
+	  <ion-nav id="nav" #content [root]="rootPage"></ion-nav>
+
 <ion-content padding>
+	
 	<div style="text-align : center" *ngIf="isMainPage">
 		<h2>Plaease Add A Patient</h2>
 		<hr>
