--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -44,7 +44,7 @@
 				Password is required
 			</ion-item>
 			<div class="div-button">
-				<button ion-button class="patient-button" (click)="signup()">SIGNUP</button>
+				<button ion-button style="background: #00838F" class="patient-button" (click)="signup()">SIGNUP</button>
 				<!-- [disabled] = "!this.loginForm.valid" -->
 			</div>
 		</ion-list>
