--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,20 +13,31 @@
         <ion-list class="ion-list">
             <ion-item class="patient-name">
                 <ion-label id="label">
-                    <ion-icon name="md-person-add"></ion-icon>
+                    <ion-icon name="md-mail"></ion-icon>
                 </ion-label>
-                <ion-input color="danger" placeholder="User Email" formControlName="userEmail" type="text"></ion-input>
+                <ion-input #userEmail color="danger" placeholder="User Email" formControlName="userEmail" type="text"
+                [class.invalid]="!loginForm.controls.userEmail.valid && loginForm.controls.userEmail.dirty"></ion-input>
             </ion-item>
+            <ion-item class="error-message" *ngIf="!loginForm.controls.userEmail.valid  && loginForm.controls.userEmail.dirty">
+				<p style="color : red">Please enter a valid email.</p>
+            </ion-item>
+            
 
             <ion-item class="patient-name">
                     <ion-label id="label">
-                        <ion-icon name="md-person-add"></ion-icon>
+                        <ion-icon name="md-lock"></ion-icon>
                     </ion-label>
-                    <ion-input color="danger" placeholder="password" formControlName="userPassword" type="text"></ion-input>
+                    <ion-input color="danger" #userPassword placeholder="password" formControlName="userPassword" type="password"
+                    [class.invalid]="loginForm.controls.userPassword?.error?.valid && loginForm.controls.userPassword?.dirty"></ion-input>
                 </ion-item>
-                <div class="div-button" >
-                        <button ion-button style="background: #00838F" class="patient-button"  (click)="login()">LOGIN</button>
-                        <!-- [disabled] = "!this.loginForm.valid" -->
+                <ion-item class="error-message" *ngIf="loginForm.controls.userPassword?.errors?.minlength  && loginForm.controls.userPassword.dirty">
+                    <p style="color : red">Your password needs more than 6 characters.</p>
+                </ion-item>
+                <ion-item style="color : red" class="error-message" *ngIf="loginForm.controls.userPassword?.errors?.required && loginForm.controls.userPassword.dirty">
+                    Password is required
+                </ion-item>
+                <div class="div-button">
+                        <button ion-button style="background: #00838F" [disabled] = "!this.loginForm.valid" class="patient-button"  (click)="login()">LOGIN</button>                        
                 </div>
         </ion-list>
     </form>
