--- a/src/pages/patient-details/patient-details.html
+++ b/src/pages/patient-details/patient-details.html
@@ -9,11 +9,11 @@
 
 <ion-content padding>
 	<ion-list style="color :#1B8BD7;font-size: 1.3em;">
-		Patient Name  <span style="float :right">{{selectedItem.patientName}}</span>
+		Patient Name <span style="float :right">{{selectedItem.patientName}}</span>
 	</ion-list>
 	<hr>
 	<ion-list style="color :#1B8BD7;font-size: 1.3em;">
-		Patient Age  <span style="float :right">{{selectedItem.patientAge}}</span>
+		Patient Age <span style="float :right">{{selectedItem.patientAge}}</span>
 	</ion-list>
 	<hr>
 	<ion-list style="color :#1B8BD7;font-size: 1.3em;">
@@ -21,9 +21,9 @@
 	</ion-list>
 	<hr>
 	<ion-list style="color :#1B8BD7;font-size: 1.3em;">
-		Patient Gender  <span style="float :right">{{selectedItem.gender}}</span>
+		Patient Gender <span style="float :right">{{selectedItem.gender}}</span>
 	</ion-list>
 	<div style="text-align : center;margin-top: 100px;">
-	<button ion-button class="patient-button"  (click)="deletePatient(selectedItem)">Delete</button>
-    </div>
+		<button ion-button color="danger" (click)="deletePatient(selectedItem)">Delete</button>
+	</div>
 </ion-content>
